@startuml

class "披萨 \n pizza" as pizza {
    + prepare();
    + bake();
    + cut();
    + box();
}

class chessPizza {
}

class greekPizza {
}

class orderPizza {
}

class orderPizza1 {
}

class orderPizza2 {
}

class SimpleFactory {
}

pizza <|-- chessPizza
pizza <|-- greekPizza

SimpleFactory --> pizza


SimpleFactory --o orderPizza
SimpleFactory --o orderPizza1
SimpleFactory --o orderPizza2

@enduml